--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
       rel="stylesheet"
     />
 
-    <title>React App</title>
+    <title>L'assiete Dujour</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
