--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,10 @@
       href="https://fonts.googleapis.com/css?family=Delius+Unicase"
       rel="stylesheet"
     />
-
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato|Montserrat|Muli|Open+Sans|Playfair+Display|Roboto:300,400&display=swap"
+      rel="stylesheet"
+    />
     <title>L'assiete Dujour</title>
   </head>
   <body>
